--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
  </div>
     <br>
 <br>
-    <a href="index.html" ><button><h2>KLIK DISINI</H2></button></a>
+    <a href="page2.html" ><button><h2>KLIK DISINI</H2></button></a>
 </body>
 </html>
